adds content to html pages

--- a/public/home.html
+++ b/public/home.html
@@ -1,1 +1,9 @@
-<img src="/img/logo.jpg" alt="logo">
+<html>
+<head>
+    <title>Node.js - Home</title>
+</head>
+
+<body>
+    <img src="/img/logo.jpg" alt="logo">
+</body>
+</html>
