fixes packages file

--- a/public/home.html
+++ b/public/home.html
@@ -45,5 +45,9 @@
 </header>
 <body>
 <p>Home.html</p>
+<form action="/index.html">
+  <input type="text" name="search">
+  <input type="submit" value="Submit">
+</form>
 </body>
 </html>
