Installed Express and created database

--- a/public/home.html
+++ b/public/home.html
@@ -45,5 +45,11 @@
 </header>
 <body>
 <p>Home.html</p>
+
+<form>
+    <input type="text" name="search" placeholder="Search albums...">
+    <input type="submit">
+</form>
+
 </body>
 </html>
