Gets details page to work with search and views

--- a/public/home.html
+++ b/public/home.html
@@ -46,9 +46,9 @@
 <body>
 <p>Home.html</p>
 
-<form>
-    <input type="text" name="search" placeholder="Search albums...">
-    <input type="submit">
+<form action="/detail" method="POST">
+    <input type="text" name="name" placeholder="Search albums...">
+    <button>Search</button>
 </form>
 
 </body>
