Adds delete functionality

--- a/public/home.html
+++ b/public/home.html
@@ -38,8 +38,8 @@
     <navigation>
        <ul>
 		<li><img src="/img/logo.png" alt="logo"></li>
-        <li><a href="http://localhost:3000/">HOME</a></li>
-		<li><a href="http://localhost:3000/about">ABOUT</a></li>	
+        <li><a href="/">HOME</a></li>
+		<li><a href="/about.html">ABOUT</a></li>	
 	   </ul>
     </navigation> 
 </header>
